--- a/gzpn-spc-csl/src/main/resources/i18n/captions_ru_RU.properties
+++ b/gzpn-spc-csl/src/main/resources/i18n/captions_ru_RU.properties
@@ -17,62 +17,89 @@ CostsTreeGridComponent.addItemButton.desc       = \u0414\u043E\u0431\u0430\u0432
 CostsTreeGridComponent.bigdecimalconverter.desc = \u041D\u0435\u0432\u0435\u0440\u043D\u044B\u0439 \u0444\u043E\u0440\u043C\u0430\u0442 \u0447\u0438\u0441\u043B\u0430
 CostsTreeGridComponent.removeItemButton.desc    = \u0423\u0434\u0430\u043B\u0438\u0442\u044C \u0441\u043C\u0435\u0442\u043D\u0443\u044E \u0441\u0442\u043E\u0438\u043C\u043E\u0441\u0442\u044C
 
-Entities.BaseEntity.changeDate          = \u0414\u0430\u0442\u0430 \u0438\u0437\u043C.
-Entities.BaseEntity.createDate          = \u0414\u0430\u0442\u0430 \u0441\u043E\u0437\u0434\u0430\u043D\u0438\u044F
-Entities.BaseEntity.id                  = \u0418\u0434.
-Entities.BaseEntity.version             = \u2116 \u0418\u0437\u043C\u0435\u043D.
-Entities.CProject                       = \u041A\u0430\u043F. \u043F\u0440\u043E\u0435\u043A\u0442
-Entities.CProject.code                  = \u041A\u043E\u0434
-Entities.CProject.name                  = \u041D\u0430\u0438\u043C\u0435\u043D\u043E\u0432\u0430\u043D\u0438\u0435
-Entities.Contract                       = \u0414\u043E\u0433\u043E\u0432\u043E\u0440
-Entities.Contract.code                  = \u041D\u043E\u043C\u0435\u0440 \u0434\u043E\u0433\u043E\u0432\u043E\u0440\u0430
-Entities.Contract.createDate            = \u0414\u0430\u0442\u0430 \u0441\u043E\u0437\u0434\u0430\u043D\u0438\u044F
-Entities.Contract.customerName          = \u0417\u0430\u043A\u0430\u0437\u0447\u0438\u043A
-Entities.Contract.executorName          = \u0418\u0441\u043F\u043E\u043B\u043D\u0438\u0442\u0435\u043B\u044C
-Entities.Document                       = \u0414\u043E\u043A\u0443\u043C\u0435\u043D\u0442
-Entities.Document.code                  = \u041D\u043E\u043C\u0435\u0440 \u0434\u043E\u043A\u0443\u043C\u0435\u043D\u0442\u0430
-Entities.Document.name                  = \u041E\u0431\u043E\u0437\u043D\u0430\u0447\u0435\u043D\u0438\u0435
-Entities.Document.type                  = \u0412\u0438\u0434
-Entities.Document.work                  = \u0420\u0430\u0431\u043E\u0442\u0430
-Entities.EstimateCalculation            = \u0421\u043C\u0435\u0442\u043D\u044B\u0439 \u0440\u0430\u0441\u0447\u0435\u0442
-Entities.EstimateCalculation.code       = \u041A\u043E\u0434 \u0441\u043C\u0435\u0442\u043D\u043E\u0433\u043E \u0440\u0430\u0441\u0447\u0435\u0442\u0430
-Entities.EstimateCalculation.cproject   = \u041A\u043E\u0434 \u043F\u0440\u043E\u0435\u043A\u0442\u0430
-Entities.EstimateCalculation.createDate = \u0414\u0430\u0442\u0430 \u0441\u043E\u0437\u0434\u0430\u043D\u0438\u044F
-Entities.EstimateCalculation.handler    = \u041E\u0431\u0440\u0430\u0431\u043E\u0442\u0447\u0438\u043A
-Entities.EstimateCalculation.name       = \u041D\u0430\u0438\u043C\u0435\u043D\u043E\u0432\u0430\u043D\u0438\u0435
-Entities.EstimateCost                   = \u0421\u043C\u0435\u0442\u043D\u0430\u044F \u0441\u0442\u043E\u0438\u043C\u043E\u0441\u0442\u044C
-Entities.EstimateHead                   = \u0413\u043B\u0430\u0432\u0430
-Entities.HProject                       = \u041A\u0440\u0443\u043F. \u043F\u0440\u043E\u0435\u043A\u0442
-Entities.HProject.code                  = \u041A\u043E\u0434
-Entities.HProject.name                  = \u041D\u0430\u0438\u043C\u0435\u043D\u043E\u0432\u0430\u043D\u0438\u0435
-Entities.LocalEstimate                  = \u041B\u043E\u043A\u0430\u043B\u044C\u043D\u0430\u044F \u0441\u043C\u0435\u0442\u0430
-Entities.Mark                           = \u041C\u0430\u0440\u043A\u0430
-Entities.Mark.code                      = \u041A\u043E\u0434
-Entities.Mark.name                      = \u041D\u0430\u0438\u043C\u0435\u043D\u043E\u0432\u0430\u043D\u0438\u0435
-Entities.Milestone                      = \u042D\u0442\u0430\u043F
-Entities.ObjectEstimate                 = \u041E\u0431\u044A\u0435\u043A\u0442\u043D\u0430\u044F \u0441\u043C\u0435\u0442\u0430
-Entities.Phase                          = \u0424\u0430\u0437\u0430
-Entities.PlanObject                     = \u041E\u0431.\u0413\u041F
-Entities.PlanObject.code                = \u041A\u043E\u0434
-Entities.PlanObject.cproject            = \u041A\u0430\u043F\u0438\u0442\u0430\u043B\u044C\u043D\u044B\u0439 \u043F\u0440\u043E\u0435\u043A\u0442
-Entities.PlanObject.name                = \u041D\u0430\u0438\u043C\u0435\u043D\u043E\u0432\u0430\u043D\u0438\u0435
-Entities.Stage                          = \u0421\u0442\u0430\u0434\u0438\u044F
-Entities.Stage.name                     = \u041D\u0430\u0438\u043C\u0435\u043D\u043E\u0432\u0430\u043D\u0438\u0435
-Entities.Work                           = \u0420\u0430\u0431\u043E\u0442\u0430
-Entities.Work.beginDate                 = \u0414\u0430\u0442\u0430 \u041A\u0421\u0413 (\u043D\u0430\u0447\u0430\u043B\u043E)
-Entities.Work.code                      = \u041A\u043E\u0434 \u0440\u0430\u0431\u043E\u0442\u044B
-Entities.Work.endDate                   = \u0414\u0430\u0442\u0430 \u041A\u0421\u0413 (\u043E\u043A\u043E\u043D\u0447\u0430\u043D\u0438\u0435)
-Entities.Work.milestone                 = \u042D\u0442\u0430\u043F \u0434\u043E\u0433\u043E\u0432\u043E\u0440\u0430 
-Entities.Work.name                      = \u041D\u0430\u0438\u043C\u0435\u043D\u043E\u0432\u0430\u043D\u0438\u0435 \u0440\u0430\u0431\u043E\u0442\u044B
-Entities.Work.planObj                   = \u041E\u0431\u044A\u0435\u043A\u0442 \u0413\u041F
-Entities.Work.type                      = \u0412\u0438\u0434 \u0440\u0430\u0431\u043E\u0442\u044B
-Entities.Work.workSet                   = \u041A\u043E\u043C\u043F\u043B\u0435\u043A\u0442
-Entities.WorkSet                        = \u041A\u043E\u043C\u043F\u043B\u0435\u043A\u0442
-Entities.WorkSet.code                   = \u041A\u043E\u0434
-Entities.WorkSet.name                   = \u041D\u0430\u0438\u043C.\u043A\u043E\u043C\u043F\u043B\u0435\u043A\u0442\u0430
-Entities.WorkSet.pir                    = \u041A\u043E\u0434 \u0440\u0430\u0431\u043E\u0442\u044B \u041F\u0418\u0420
-Entities.WorkSet.planObject             = \u041E\u0431\u044A\u0435\u043A\u0442 \u0433\u0435\u043D\u043F\u043B\u0430\u043D\u0430
-Entities.WorkSet.smr                    = \u041A\u043E\u0434 \u0440\u0430\u0431\u043E\u0442\u044B \u0421\u041C\u0420
+Entities.BaseEntity.changeDate                = \u0414\u0430\u0442\u0430 \u0438\u0437\u043C.
+Entities.BaseEntity.createDate                = \u0414\u0430\u0442\u0430 \u0441\u043E\u0437\u0434\u0430\u043D\u0438\u044F
+Entities.BaseEntity.id                        = \u0418\u0434.
+Entities.BaseEntity.version                   = \u2116 \u0418\u0437\u043C\u0435\u043D.
+Entities.CProject                             = \u041A\u0430\u043F. \u043F\u0440\u043E\u0435\u043A\u0442
+Entities.CProject.code                        = \u041A\u043E\u0434
+Entities.CProject.name                        = \u041D\u0430\u0438\u043C\u0435\u043D\u043E\u0432\u0430\u043D\u0438\u0435
+Entities.Contract                             = \u0414\u043E\u0433\u043E\u0432\u043E\u0440
+Entities.Contract.code                        = \u041D\u043E\u043C\u0435\u0440 \u0434\u043E\u0433\u043E\u0432\u043E\u0440\u0430
+Entities.Contract.createDate                  = \u0414\u0430\u0442\u0430 \u0441\u043E\u0437\u0434\u0430\u043D\u0438\u044F
+Entities.Contract.customerName                = \u0417\u0430\u043A\u0430\u0437\u0447\u0438\u043A
+Entities.Contract.executorName                = \u0418\u0441\u043F\u043E\u043B\u043D\u0438\u0442\u0435\u043B\u044C
+Entities.Document                             = \u0414\u043E\u043A\u0443\u043C\u0435\u043D\u0442
+Entities.Document.code                        = \u041D\u043E\u043C\u0435\u0440 \u0434\u043E\u043A\u0443\u043C\u0435\u043D\u0442\u0430
+Entities.Document.name                        = \u041E\u0431\u043E\u0437\u043D\u0430\u0447\u0435\u043D\u0438\u0435
+Entities.Document.type                        = \u0412\u0438\u0434
+Entities.Document.work                        = \u0420\u0430\u0431\u043E\u0442\u0430
+Entities.EstimateCalculation                  = \u0421\u043C\u0435\u0442\u043D\u044B\u0439 \u0440\u0430\u0441\u0447\u0435\u0442
+Entities.EstimateCalculation.code             = \u041A\u043E\u0434 \u0441\u043C\u0435\u0442\u043D\u043E\u0433\u043E \u0440\u0430\u0441\u0447\u0435\u0442\u0430
+Entities.EstimateCalculation.cproject         = \u041A\u043E\u0434 \u043F\u0440\u043E\u0435\u043A\u0442\u0430
+Entities.EstimateCalculation.createDate       = \u0414\u0430\u0442\u0430 \u0441\u043E\u0437\u0434\u0430\u043D\u0438\u044F
+Entities.EstimateCalculation.handler          = \u041E\u0431\u0440\u0430\u0431\u043E\u0442\u0447\u0438\u043A
+Entities.EstimateCalculation.name             = \u041D\u0430\u0438\u043C\u0435\u043D\u043E\u0432\u0430\u043D\u0438\u0435
+Entities.EstimateCost                         = \u0421\u043C\u0435\u0442\u043D\u0430\u044F \u0441\u0442\u043E\u0438\u043C\u043E\u0441\u0442\u044C
+Entities.EstimateCost.devicesContractorSupply = \u041F\u043E\u0441\u0442.\u0437\u0430\u043A.(\u043E)
+Entities.EstimateCost.devicesCustomerSupply   = \u041F\u043E\u0441\u0442.\u043F\u043E\u0434\u0440.(\u043E)
+Entities.EstimateCost.devicesPercentManual    = \u041F\u0440\u043E\u0446.\u0440\u0443\u0447.(\u043E)
+Entities.EstimateCost.devicesTotal            = \u0412\u0441\u0435\u0433\u043E(\u043E)
+Entities.EstimateCost.emm                     = \u042D\u041C\u041C
+Entities.EstimateCost.localEstimate           = \u041B\u043E\u043A.\u0441\u043C\u0435\u0442\u0430
+Entities.EstimateCost.matContractorSupply     = \u041F\u043E\u0441\u0442.\u0437\u0430\u043A.(\u043C)
+Entities.EstimateCost.matCustomerSupply       = \u041F\u043E\u0441\u0442.\u043F\u043E\u0434\u0440.(\u043C)
+Entities.EstimateCost.matPercentManual        = \u041F\u0440\u043E\u0446.\u0440\u0443\u0447.(\u043C)
+Entities.EstimateCost.nr                      = \u041D\u0420
+Entities.EstimateCost.objectEstimate          = \u041E\u0431\u044A\u043A\u0442.\u0441\u043C\u0435\u0442\u0430
+Entities.EstimateCost.other                   = \u041F\u0440\u043E\u0447\u0438\u0435
+Entities.EstimateCost.ozp                     = \u041E\u0417\u041F
+Entities.EstimateCost.services                = \u0423\u0441\u043B\u0443\u0433\u0438(\u0421\u041C\u0420)
+Entities.EstimateCost.smrTotal                = \u0418\u0442\u043E\u0433.\u0421\u041C\u0420
+Entities.EstimateCost.sp                      = \u0421\u041F
+Entities.EstimateCost.total                   = \u0412\u0441\u0435\u0433\u043E
+Entities.EstimateCost.zpm                     = \u0432 \u0442.\u0447.\u0417\u041F\u041C
+Entities.EstimateHead                         = \u0413\u043B\u0430\u0432\u0430
+Entities.HProject                             = \u041A\u0440\u0443\u043F. \u043F\u0440\u043E\u0435\u043A\u0442
+Entities.HProject.code                        = \u041A\u043E\u0434
+Entities.HProject.name                        = \u041D\u0430\u0438\u043C\u0435\u043D\u043E\u0432\u0430\u043D\u0438\u0435
+Entities.LocalEstimate                        = \u041B\u043E\u043A\u0430\u043B\u044C\u043D\u0430\u044F \u0441\u043C\u0435\u0442\u0430
+Entities.LocalEstimate.changedBy              = \u0418\u0437\u043C\u0435\u043D\u0438\u043B
+Entities.LocalEstimate.code                   = \u041E\u0431\u043E\u0437\u043D\u0430\u0447\u0435\u043D\u0438\u0435
+Entities.LocalEstimate.comment                = \u041A\u043E\u043C\u043C\u0435\u043D\u0442\u0430\u0440\u0438\u0439
+Entities.LocalEstimate.document               = \u0414\u043E\u043A\u0443\u043C\u0435\u043D\u0442
+Entities.LocalEstimate.drawing                = \u0427\u0435\u0440\u0442\u0435\u0436
+Entities.LocalEstimate.estimateHead           = \u0413\u043B\u0430\u0432\u0430
+Entities.LocalEstimate.name                   = \u041D\u0430\u0438\u043C\u0435\u043D\u043E\u0432\u0430\u043D\u0438\u0435
+Entities.LocalEstimate.stage                  = \u0421\u0442\u0430\u0434\u0438\u044F
+Entities.LocalEstimate.status                 = \u0421\u0442\u0430\u0442\u0443\u0441
+Entities.Mark                                 = \u041C\u0430\u0440\u043A\u0430
+Entities.Mark.code                            = \u041A\u043E\u0434
+Entities.Mark.name                            = \u041D\u0430\u0438\u043C\u0435\u043D\u043E\u0432\u0430\u043D\u0438\u0435
+Entities.Milestone                            = \u042D\u0442\u0430\u043F
+Entities.ObjectEstimate                       = \u041E\u0431\u044A\u0435\u043A\u0442\u043D\u0430\u044F \u0441\u043C\u0435\u0442\u0430
+Entities.Phase                                = \u0424\u0430\u0437\u0430
+Entities.PlanObject                           = \u041E\u0431.\u0413\u041F
+Entities.PlanObject.code                      = \u041A\u043E\u0434
+Entities.PlanObject.cproject                  = \u041A\u0430\u043F\u0438\u0442\u0430\u043B\u044C\u043D\u044B\u0439 \u043F\u0440\u043E\u0435\u043A\u0442
+Entities.PlanObject.name                      = \u041D\u0430\u0438\u043C\u0435\u043D\u043E\u0432\u0430\u043D\u0438\u0435
+Entities.Stage                                = \u0421\u0442\u0430\u0434\u0438\u044F
+Entities.Stage.name                           = \u041D\u0430\u0438\u043C\u0435\u043D\u043E\u0432\u0430\u043D\u0438\u0435
+Entities.Work                                 = \u0420\u0430\u0431\u043E\u0442\u0430
+Entities.Work.beginDate                       = \u0414\u0430\u0442\u0430 \u041A\u0421\u0413 (\u043D\u0430\u0447\u0430\u043B\u043E)
+Entities.Work.code                            = \u041A\u043E\u0434 \u0440\u0430\u0431\u043E\u0442\u044B
+Entities.Work.endDate                         = \u0414\u0430\u0442\u0430 \u041A\u0421\u0413 (\u043E\u043A\u043E\u043D\u0447\u0430\u043D\u0438\u0435)
+Entities.Work.milestone                       = \u042D\u0442\u0430\u043F \u0434\u043E\u0433\u043E\u0432\u043E\u0440\u0430 
+Entities.Work.name                            = \u041D\u0430\u0438\u043C\u0435\u043D\u043E\u0432\u0430\u043D\u0438\u0435 \u0440\u0430\u0431\u043E\u0442\u044B
+Entities.Work.planObj                         = \u041E\u0431\u044A\u0435\u043A\u0442 \u0413\u041F
+Entities.Work.type                            = \u0412\u0438\u0434 \u0440\u0430\u0431\u043E\u0442\u044B
+Entities.Work.workSet                         = \u041A\u043E\u043C\u043F\u043B\u0435\u043A\u0442
+Entities.WorkSet                              = \u041A\u043E\u043C\u043F\u043B\u0435\u043A\u0442
+Entities.WorkSet.code                         = \u041A\u043E\u0434
+Entities.WorkSet.name                         = \u041D\u0430\u0438\u043C.\u043A\u043E\u043C\u043F\u043B\u0435\u043A\u0442\u0430
+Entities.WorkSet.pir                          = \u041A\u043E\u0434 \u0440\u0430\u0431\u043E\u0442\u044B \u041F\u0418\u0420
+Entities.WorkSet.planObject                   = \u041E\u0431\u044A\u0435\u043A\u0442 \u0433\u0435\u043D\u043F\u043B\u0430\u043D\u0430
+Entities.WorkSet.smr                          = \u041A\u043E\u0434 \u0440\u0430\u0431\u043E\u0442\u044B \u0421\u041C\u0420
 
 ItemCreatingWindow.addButton.cap   = \u0421\u043E\u0445\u0440\u0430\u043D\u0438\u0442\u044C \u0438 \u0437\u0430\u043A\u0440\u044B\u0442\u044C
 ItemCreatingWindow.closeButton.cap = \u0417\u0430\u043A\u0440\u044B\u0442\u044C
