--- a/gzpn-spc-csl/src/main/resources/i18n/captions_en.properties
+++ b/gzpn-spc-csl/src/main/resources/i18n/captions_en.properties
@@ -17,62 +17,89 @@ CostsTreeGridComponent.addItemButton.desc       = Add cost
 CostsTreeGridComponent.bigdecimalconverter.desc = Must be an amount
 CostsTreeGridComponent.removeItemButton.desc    = Remove the cost
 
-Entities.BaseEntity.changeDate          = Change date
-Entities.BaseEntity.createDate          = Create date
-Entities.BaseEntity.id                  = ID
-Entities.BaseEntity.version             = Version
-Entities.CProject                       = Capital Project
-Entities.CProject.code                  = Code
-Entities.CProject.name                  = Name
-Entities.Contract                       = Contract
-Entities.Contract.code                  = Code
-Entities.Contract.createDate            = Create date
-Entities.Contract.customerName          = Customer
-Entities.Contract.executorName          = Executor
-Entities.Document                       = Document
-Entities.Document.code                  = Document Number
-Entities.Document.name                  = Designation
-Entities.Document.type                  = Type
-Entities.Document.work                  = Work
-Entities.EstimateCalculation            = Estimate Calculation
-Entities.EstimateCalculation.code       = Code
-Entities.EstimateCalculation.cproject   = Code project
-Entities.EstimateCalculation.createDate = Create date
-Entities.EstimateCalculation.handler    = Handler
-Entities.EstimateCalculation.name       = Name
-Entities.EstimateCost                   = Estimate Cost
-Entities.EstimateHead                   = Estimate Head
-Entities.HProject                       = Heavy Project
-Entities.HProject.code                  = Code
-Entities.HProject.name                  = Name
-Entities.LocalEstimate                  = Local Estimate
-Entities.Mark                           = Mark
-Entities.Mark.code                      = Code
-Entities.Mark.name                      = Name
-Entities.Milestone                      = Milestone
-Entities.ObjectEstimate                 = Object Estimate
-Entities.Phase                          = Phase
-Entities.PlanObject                     = Plan Object
-Entities.PlanObject.code                = Code
-Entities.PlanObject.cproject            = Capital Project
-Entities.PlanObject.name                = Name
-Entities.Stage                          = Stage
-Entities.Stage.name                     = Name
-Entities.Work                           = Work
-Entities.Work.beginDate                 = Begin date
-Entities.Work.code                      = Code
-Entities.Work.endDate                   = End date
-Entities.Work.milestone                 = Milestone
-Entities.Work.name                      = Name
-Entities.Work.planObj                   = Plan Object
-Entities.Work.type                      = Work type
-Entities.Work.workSet                   = Work Set
-Entities.WorkSet                        = Work Set
-Entities.WorkSet.code                   = Code
-Entities.WorkSet.name                   = Name
-Entities.WorkSet.pir                    = Work code PIR
-Entities.WorkSet.planObject             = Plan Object
-Entities.WorkSet.smr                    = Work code SMR
+Entities.BaseEntity.changeDate                = Change date
+Entities.BaseEntity.createDate                = Create date
+Entities.BaseEntity.id                        = ID
+Entities.BaseEntity.version                   = Version
+Entities.CProject                             = Capital Project
+Entities.CProject.code                        = Code
+Entities.CProject.name                        = Name
+Entities.Contract                             = Contract
+Entities.Contract.code                        = Code
+Entities.Contract.createDate                  = Create date
+Entities.Contract.customerName                = Customer
+Entities.Contract.executorName                = Executor
+Entities.Document                             = Document
+Entities.Document.code                        = Document Number
+Entities.Document.name                        = Designation
+Entities.Document.type                        = Type
+Entities.Document.work                        = Work
+Entities.EstimateCalculation                  = Estimate Calculation
+Entities.EstimateCalculation.code             = Code
+Entities.EstimateCalculation.cproject         = Code project
+Entities.EstimateCalculation.createDate       = Create date
+Entities.EstimateCalculation.handler          = Handler
+Entities.EstimateCalculation.name             = Name
+Entities.EstimateCost                         = Estimate Cost
+Entities.EstimateCost.devicesContractorSupply = Cont.sup.(d)
+Entities.EstimateCost.devicesCustomerSupply   = Custom.sup.(d)
+Entities.EstimateCost.devicesPercentManual    = Perc.man.(d)
+Entities.EstimateCost.devicesTotal            = Total(d)
+Entities.EstimateCost.emm                     = EMM
+Entities.EstimateCost.localEstimate           = Loc.est.
+Entities.EstimateCost.matContractorSupply     = Cont.sup.(m)
+Entities.EstimateCost.matCustomerSupply       = Custom.sup.(m)
+Entities.EstimateCost.matPercentManual        = Perc.man.(m)
+Entities.EstimateCost.nr                      = NR
+Entities.EstimateCost.objectEstimate          = Obj.est.
+Entities.EstimateCost.other                   = Other
+Entities.EstimateCost.ozp                     = OZP
+Entities.EstimateCost.services                = Serv.SMR
+Entities.EstimateCost.smrTotal                = Total SMR
+Entities.EstimateCost.sp                      = SP
+Entities.EstimateCost.total                   = Total
+Entities.EstimateCost.zpm                     = ZPM
+Entities.EstimateHead                         = Estimate Head
+Entities.HProject                             = Heavy Project
+Entities.HProject.code                        = Code
+Entities.HProject.name                        = Name
+Entities.LocalEstimate                        = Local Estimate
+Entities.LocalEstimate.changedBy              = Changed by
+Entities.LocalEstimate.code                   = Code
+Entities.LocalEstimate.comment                = Comment
+Entities.LocalEstimate.document               = Document
+Entities.LocalEstimate.drawing                = Drawing
+Entities.LocalEstimate.estimateHead           = Head
+Entities.LocalEstimate.name                   = Title
+Entities.LocalEstimate.stage                  = Stage
+Entities.LocalEstimate.status                 = Status
+Entities.Mark                                 = Mark
+Entities.Mark.code                            = Code
+Entities.Mark.name                            = Name
+Entities.Milestone                            = Milestone
+Entities.ObjectEstimate                       = Object Estimate
+Entities.Phase                                = Phase
+Entities.PlanObject                           = Plan Object
+Entities.PlanObject.code                      = Code
+Entities.PlanObject.cproject                  = Capital Project
+Entities.PlanObject.name                      = Name
+Entities.Stage                                = Stage
+Entities.Stage.name                           = Name
+Entities.Work                                 = Work
+Entities.Work.beginDate                       = Begin date
+Entities.Work.code                            = Code
+Entities.Work.endDate                         = End date
+Entities.Work.milestone                       = Milestone
+Entities.Work.name                            = Name
+Entities.Work.planObj                         = Plan Object
+Entities.Work.type                            = Work type
+Entities.Work.workSet                         = Work Set
+Entities.WorkSet                              = Work Set
+Entities.WorkSet.code                         = Code
+Entities.WorkSet.name                         = Name
+Entities.WorkSet.pir                          = Work code PIR
+Entities.WorkSet.planObject                   = Plan Object
+Entities.WorkSet.smr                          = Work code SMR
 
 ItemCreatingWindow.addButton.cap   = Save and close
 ItemCreatingWindow.closeButton.cap = Cancel
