--- a/gzpn-spc-csl/src/main/resources/i18n/captions_en.properties
+++ b/gzpn-spc-csl/src/main/resources/i18n/captions_en.properties
@@ -121,23 +121,32 @@ RegisterComponent.createItemButton.cap = Create
 RegisterComponent.filter.placeholder   = Search...
 RegisterComponent.openItemButton.cap   = Open
 
-SummaryEstimateCardComponent.calcFields.createDate.cap     = Create date
-SummaryEstimateCardComponent.calcFields.estimateCode.cap   = Estimate calculation code
-SummaryEstimateCardComponent.calcFields.name.cap           = Estimate calculation name
-SummaryEstimateCardComponent.calcFields.projectCode.cap    = Project code
-SummaryEstimateCardComponent.closebutton.cap               = Close
-SummaryEstimateCardComponent.commentTab.cap                = Comment
-SummaryEstimateCardComponent.costsTab.cap                  = Estimated cost
-SummaryEstimateCardComponent.estimatecalculationfileds.cap = Summary Estimate Attributes 
-SummaryEstimateCardComponent.initialmaxpricebutton.cap     = Calculate
-SummaryEstimateCardComponent.itemsCombobox.placeholder     = Show
-SummaryEstimateCardComponent.priceLevel.cap                = Price level
-SummaryEstimateCardComponent.saveButton.desc               = Save
-SummaryEstimateCardComponent.sendforapprovalbutton.cap     = Send for approval
-SummaryEstimateCardComponent.settingsbutton.cap            = Settings of summary estimate calculation
-SummaryEstimateCardComponent.viewAttributes.cap            = View
-SummaryEstimateCardComponent.viewCombobox.placeholder      = Estimate
-SummaryEstimateCardComponent.workSmrTab.cap                = Work SMR
+SummaryEstimateCardComponent.calcFields.createDate.cap                   = Create date
+SummaryEstimateCardComponent.calcFields.estimateCode.cap                 = Estimate calculation code
+SummaryEstimateCardComponent.calcFields.name.cap                         = Estimate calculation name
+SummaryEstimateCardComponent.calcFields.projectCode.cap                  = Project code
+SummaryEstimateCardComponent.closebutton.cap                             = Close
+SummaryEstimateCardComponent.commentTab.cap                              = Comment
+SummaryEstimateCardComponent.costsTab.cap                                = Estimated cost
+SummaryEstimateCardComponent.estimatecalculationfileds.cap               = Summary Estimate Attributes 
+SummaryEstimateCardComponent.initialmaxpricebutton.cap                   = Calculate
+SummaryEstimateCardComponent.itemsCombobox.placeholder                   = Show
+SummaryEstimateCardComponent.priceLevel.cap                              = Price level
+SummaryEstimateCardComponent.saveButton.desc                             = Save
+SummaryEstimateCardComponent.sendforapprovalbutton.cap                   = Send for approval
+SummaryEstimateCardComponent.settingsbutton.cap                          = Settings of summary estimate calculation
+SummaryEstimateCardComponent.uploadLimitMessage.cap                      = Uploading file size mustn't be greater than {0} Mb
+SummaryEstimateCardComponent.uploadMimeTypeMessage                       = Please, choose EXCEL file
+SummaryEstimateCardComponent.uploadMimeTypeMessage.cap                   = Incorrect file type
+SummaryEstimateCardComponent.uploadProgressWindow.cancelButton.cap       = Cancel
+SummaryEstimateCardComponent.uploadProgressWindow.cap                    = Uploading the Excel file of local estimates
+SummaryEstimateCardComponent.uploadProgressWindow.file.cap               = File name
+SummaryEstimateCardComponent.uploadProgressWindow.state.cap              = State
+SummaryEstimateCardComponent.uploadProgressWindow.toBackgroundButton.cap = Run in background
+SummaryEstimateCardComponent.uploadProgressWindow.uploadingProgress.cap  = Progress
+SummaryEstimateCardComponent.viewAttributes.cap                          = View
+SummaryEstimateCardComponent.viewCombobox.placeholder                    = Estimate
+SummaryEstimateCardComponent.workSmrTab.cap                              = Work SMR
 
 TaskAlreadyAssigned.text = Task has already been assigned by user {0}.
 
@@ -260,6 +269,10 @@ ru.gzpn.spc.csl.model.enums.LocalEstimateStatus.in_work     = In work
 ru.gzpn.spc.csl.model.enums.PriceLevel.contract             = Contract
 ru.gzpn.spc.csl.model.enums.PriceLevel.current              = Current
 ru.gzpn.spc.csl.model.enums.PriceLevel.level_2000           = 2000
+ru.gzpn.spc.csl.model.enums.ProgressState.canceled          = Canceled
+ru.gzpn.spc.csl.model.enums.ProgressState.finished          = Finished
+ru.gzpn.spc.csl.model.enums.ProgressState.inprogress        = Processing file data
+ru.gzpn.spc.csl.model.enums.ProgressState.uploading         = Uploading to the server..
 ru.gzpn.spc.csl.model.enums.TaxType.INCLUDING_18_PERC       = With 18 perc
 ru.gzpn.spc.csl.model.enums.TaxType.NO                      = No
 ru.gzpn.spc.csl.model.enums.TaxType.NOT_INCLUDING_18_PERC   = Without 18 perc
