--- a/gzpn-spc-csl/src/main/resources/i18n/captions_en.properties
+++ b/gzpn-spc-csl/src/main/resources/i18n/captions_en.properties
@@ -116,6 +116,7 @@ LocalEstimatesTreeGridComponent.removeItemButton.desc = Remove local estimate
 
 ProcessManagerView.bpmnModelerTab.cap = BPMN Diagram
 ProcessManagerView.plotsTab.cap       = Statistics
+ProcessManagerView.procViewerTab.cap  = Process & tasks
 
 RegisterComponent.createItemButton.cap = Create
 RegisterComponent.filter.placeholder   = Search...
