--- a/gzpn-spc-csl/src/main/resources/i18n/captions_ru_RU.properties
+++ b/gzpn-spc-csl/src/main/resources/i18n/captions_ru_RU.properties
@@ -116,6 +116,7 @@ LocalEstimatesTreeGridComponent.removeItemButton.desc = \u0423\u0434\u0430\u043B
 
 ProcessManagerView.bpmnModelerTab.cap = BPMN \u0441\u0445\u0435\u043C\u0430 \u043F\u0440\u043E\u0446\u0435\u0441\u0441\u0430
 ProcessManagerView.plotsTab.cap       = \u0421\u0442\u0430\u0442\u0438\u0441\u0442\u0438\u043A\u0430
+ProcessManagerView.procViewerTab.cap  = \u041F\u0440\u043E\u0446\u0435\u0441\u0441\u044B \u0438 \u0437\u0430\u0434\u0430\u0447\u0438
 
 RegisterComponent.createItemButton.cap = \u0421\u043E\u0437\u0434\u0430\u0442\u044C
 RegisterComponent.filter.placeholder   = \u0412\u0432\u0435\u0434\u0438\u0442\u0435 \u0444\u0438\u043B\u044C\u0442\u0440...
