--- a/gzpn-spc-csl/src/main/resources/i18n/captions_en.properties
+++ b/gzpn-spc-csl/src/main/resources/i18n/captions_en.properties
@@ -13,6 +13,11 @@ AnalyticsComponent.estimateCalc.lastMonth.cap           = Last month estimate ca
 AnalyticsComponent.estimateCalc.lastWeek.cap            = Last week estimate calculations plot
 AnalyticsComponent.estimateCalc.rejectEstimateCalc.cap  = Reject estimates calc.
 
+ConfirmDialogWindow.cancel             = Cancel
+ConfirmDialogWindow.confirmMessage     = Confirm the operation
+ConfirmDialogWindow.sendSsrForApproval = Send SSR card for approval?
+ConfirmDialogWindow.yes                = Ok
+
 CostsTreeGridComponent.addItemButton.desc       = Add cost
 CostsTreeGridComponent.bigdecimalconverter.desc = Must be an amount
 CostsTreeGridComponent.removeItemButton.desc    = Remove the cost
