--- a/gzpn-spc-csl/src/main/resources/i18n/captions_ru_RU.properties
+++ b/gzpn-spc-csl/src/main/resources/i18n/captions_ru_RU.properties
@@ -13,6 +13,11 @@ AnalyticsComponent.estimateCalc.lastMonth.cap           = \u0421\u043E\u0433\u04
 AnalyticsComponent.estimateCalc.lastWeek.cap            = \u0421\u043E\u0433\u043B\u0430\u0441\u043E\u0432\u0430\u043D\u0438\u044F \u0421\u0421\u0420 \u0433\u0440\u0430\u0444\u0438\u043A (\u043D\u0435\u0434\u0435\u043B\u044F)
 AnalyticsComponent.estimateCalc.rejectEstimateCalc.cap  = \u041D\u0435 \u0441\u043E\u0433\u043B\u0430\u0441\u043E\u0432\u0430\u043D\u043E \u0421\u0421\u0420
 
+ConfirmDialogWindow.cancel             = \u041E\u0442\u043C\u0435\u043D\u0430
+ConfirmDialogWindow.confirmMessage     = \u041F\u043E\u0434\u0442\u0432\u0435\u0440\u0434\u0438\u0442\u0435 \u043E\u043F\u0435\u0440\u0430\u0446\u0438\u044E
+ConfirmDialogWindow.sendSsrForApproval = \u041F\u0435\u0440\u0435\u0434\u0430\u0442\u044C \u043A\u0430\u0440\u0442\u043E\u0447\u043A\u0443 \u0421\u0421\u0420 \u043D\u0430 \u0441\u043E\u0433\u043B\u0430\u0441\u043E\u0432\u0430\u043D\u0438\u0435?
+ConfirmDialogWindow.yes                = \u0414\u0430
+
 CostsTreeGridComponent.addItemButton.desc       = \u0414\u043E\u0431\u0430\u0432\u0438\u0442\u044C \u0441\u043C\u0435\u0442\u043D\u0443\u044E \u0441\u0442\u043E\u0438\u043C\u043E\u0441\u0442\u044C
 CostsTreeGridComponent.bigdecimalconverter.desc = \u041D\u0435\u0432\u0435\u0440\u043D\u044B\u0439 \u0444\u043E\u0440\u043C\u0430\u0442 \u0447\u0438\u0441\u043B\u0430
 CostsTreeGridComponent.removeItemButton.desc    = \u0423\u0434\u0430\u043B\u0438\u0442\u044C \u0441\u043C\u0435\u0442\u043D\u0443\u044E \u0441\u0442\u043E\u0438\u043C\u043E\u0441\u0442\u044C
