--- a/gzpn-spc-csl/src/main/resources/i18n/captions_en.properties
+++ b/gzpn-spc-csl/src/main/resources/i18n/captions_en.properties
@@ -156,6 +156,8 @@ SummaryEstimateCardComponent.workSmrTab.cap                              = Work 
 
 TaskAlreadyAssigned.text = Task has already been assigned by user {0}.
 
+TaskAlreadyClosedView.text = Task has already been finished by {0} at {1}
+
 TreeGridSettingsWindow.addButton.cap  = Add new header
 TreeGridSettingsWindow.cap            = User view settings
 TreeGridSettingsWindow.columnstab.cap = Columns settings
