--- a/gzpn-spc-csl/src/main/resources/i18n/captions_en.properties
+++ b/gzpn-spc-csl/src/main/resources/i18n/captions_en.properties
@@ -127,32 +127,34 @@ RegisterComponent.createItemButton.cap = Create
 RegisterComponent.filter.placeholder   = Search...
 RegisterComponent.openItemButton.cap   = Open
 
-SummaryEstimateCardComponent.calcFields.createDate.cap                   = Create date
-SummaryEstimateCardComponent.calcFields.estimateCode.cap                 = Estimate calculation code
-SummaryEstimateCardComponent.calcFields.name.cap                         = Estimate calculation name
-SummaryEstimateCardComponent.calcFields.projectCode.cap                  = Project code
-SummaryEstimateCardComponent.closebutton.cap                             = Close
-SummaryEstimateCardComponent.commentTab.cap                              = Comment
-SummaryEstimateCardComponent.costsTab.cap                                = Estimated cost
-SummaryEstimateCardComponent.estimatecalculationfileds.cap               = Summary Estimate Attributes 
-SummaryEstimateCardComponent.initialmaxpricebutton.cap                   = Calculate
-SummaryEstimateCardComponent.itemsCombobox.placeholder                   = Show
-SummaryEstimateCardComponent.priceLevel.cap                              = Price level
-SummaryEstimateCardComponent.saveButton.desc                             = Save
-SummaryEstimateCardComponent.sendforapprovalbutton.cap                   = Send for approval
-SummaryEstimateCardComponent.settingsbutton.cap                          = Settings of summary estimate calculation
-SummaryEstimateCardComponent.uploadLimitMessage.cap                      = Uploading file size mustn't be greater than {0} Mb
-SummaryEstimateCardComponent.uploadMimeTypeMessage                       = Please, choose EXCEL file
-SummaryEstimateCardComponent.uploadMimeTypeMessage.cap                   = Incorrect file type
-SummaryEstimateCardComponent.uploadProgressWindow.cancelButton.cap       = Cancel
-SummaryEstimateCardComponent.uploadProgressWindow.cap                    = Uploading the Excel file of local estimates
-SummaryEstimateCardComponent.uploadProgressWindow.file.cap               = File name
-SummaryEstimateCardComponent.uploadProgressWindow.state.cap              = State
-SummaryEstimateCardComponent.uploadProgressWindow.toBackgroundButton.cap = Run in background
-SummaryEstimateCardComponent.uploadProgressWindow.uploadingProgress.cap  = Progress
-SummaryEstimateCardComponent.viewAttributes.cap                          = View
-SummaryEstimateCardComponent.viewCombobox.placeholder                    = Estimate
-SummaryEstimateCardComponent.workSmrTab.cap                              = Work SMR
+SummaryEstimateCardComponent.calcFields.createDate.cap                         = Create date
+SummaryEstimateCardComponent.calcFields.estimateCode.cap                       = Estimate calculation code
+SummaryEstimateCardComponent.calcFields.name.cap                               = Estimate calculation name
+SummaryEstimateCardComponent.calcFields.projectCode.cap                        = Project code
+SummaryEstimateCardComponent.closebutton.cap                                   = Close
+SummaryEstimateCardComponent.commentTab.cap                                    = Comment
+SummaryEstimateCardComponent.costsTab.cap                                      = Estimated cost
+SummaryEstimateCardComponent.estimatecalculationfileds.cap                     = Summary Estimate Attributes 
+SummaryEstimateCardComponent.initialmaxpricebutton.cap                         = Calculate
+SummaryEstimateCardComponent.itemsCombobox.placeholder                         = Show
+SummaryEstimateCardComponent.priceLevel.cap                                    = Price level
+SummaryEstimateCardComponent.saveButton.desc                                   = Save
+SummaryEstimateCardComponent.sendforapprovalbutton.cap                         = Send for approval
+SummaryEstimateCardComponent.settingsbutton.cap                                = Settings of summary estimate calculation
+SummaryEstimateCardComponent.uploadLimitMessage.cap                            = Uploading file size mustn't be greater than {0} Mb
+SummaryEstimateCardComponent.uploadMimeTypeMessage                             = Please, choose EXCEL file
+SummaryEstimateCardComponent.uploadMimeTypeMessage.cap                         = Incorrect file type
+SummaryEstimateCardComponent.uploadProgressWindow.cancelButton.cap             = Cancel
+SummaryEstimateCardComponent.uploadProgressWindow.cap                          = Uploading the Excel file of local estimates
+SummaryEstimateCardComponent.uploadProgressWindow.file.cap                     = File name
+SummaryEstimateCardComponent.uploadProgressWindow.state.cap                    = State
+SummaryEstimateCardComponent.uploadProgressWindow.toBackgroundButton.cap       = Run in background
+SummaryEstimateCardComponent.uploadProgressWindow.toBackgroundNotification.cap = Switching to background mode
+SummaryEstimateCardComponent.uploadProgressWindow.toBackgroundNotification.des = You will be notified by Email when the processing is finished
+SummaryEstimateCardComponent.uploadProgressWindow.uploadingProgress.cap        = Progress
+SummaryEstimateCardComponent.viewAttributes.cap                                = View
+SummaryEstimateCardComponent.viewCombobox.placeholder                          = Estimate
+SummaryEstimateCardComponent.workSmrTab.cap                                    = Work SMR
 
 TaskAlreadyAssigned.text = Task has already been assigned by user {0}.
 
