--- a/gzpn-spc-csl/src/main/resources/i18n/captions.properties
+++ b/gzpn-spc-csl/src/main/resources/i18n/captions.properties
@@ -148,6 +148,8 @@ SummaryEstimateCardComponent.uploadProgressWindow.cancelButton.cap             =
 SummaryEstimateCardComponent.uploadProgressWindow.cap                          = Uploading the Excel file of local estimates
 SummaryEstimateCardComponent.uploadProgressWindow.file.cap                     = File name
 SummaryEstimateCardComponent.uploadProgressWindow.state.cap                    = State
+SummaryEstimateCardComponent.uploadProgressWindow.success.cap                  = The processing has been completed 
+SummaryEstimateCardComponent.uploadProgressWindow.success.des                  = The file {0} was successfuly processed in {1} sec
 SummaryEstimateCardComponent.uploadProgressWindow.toBackgroundButton.cap       = Run in background 
 SummaryEstimateCardComponent.uploadProgressWindow.toBackgroundNotification.cap = Switching to background mode
 SummaryEstimateCardComponent.uploadProgressWindow.toBackgroundNotification.des = You will be notified by Email when the processing is finished
