need to add process variable contractId. fix i18n

--- a/gzpn-spc-csl/src/main/resources/i18n/captions.properties
+++ b/gzpn-spc-csl/src/main/resources/i18n/captions.properties
@@ -19,53 +19,26 @@ ConfirmDialogWindow.saveContractCard   = Save contract card?
 ConfirmDialogWindow.sendSsrForApproval = Send SSR card for approval?
 ConfirmDialogWindow.yes                = Ok
 
-ContractCardComponent.calcFields.createDate.cap                         = Create date
-ContractCardComponent.calcFields.estimateCode.cap                       = Estimate calculation code
-ContractCardComponent.calcFields.name.cap                               = Estimate calculation name
-ContractCardComponent.calcFields.projectCode.cap                        = Project code
-ContractCardComponent.closebutton.cap                                   = Close
-ContractCardComponent.commentTab.cap                                    = Comment
-ContractCardComponent.costsTab.cap                                      = Estimated cost
-ContractCardComponent.estimatecalculationfileds.cap                     = Summary Estimate Attributes 
-ContractCardComponent.fields.contractCode                               = Contract \u2116
-ContractCardComponent.fields.contractType                               = Type
-ContractCardComponent.fields.customerName                               = Customer
-ContractCardComponent.fields.endDate                                    = End deadline
-ContractCardComponent.fields.executorName                               = Executor
-ContractCardComponent.fields.project                                    = Project
-ContractCardComponent.fields.signingDate                                = Signing date
-ContractCardComponent.fields.startDate                                  = Start deadline
-ContractCardComponent.fileds.cap                                        = Contract card fields
-ContractCardComponent.initialmaxpricebutton.cap                         = Calculate
-ContractCardComponent.itemsCombobox.placeholder                         = Show
-ContractCardComponent.notifications.save.cap                            = Contract card is saved
-ContractCardComponent.notifications.save.des                            = Current step of the process is complited
-ContractCardComponent.priceLevel.cap                                    = Price level
-ContractCardComponent.saveButton.cap                                    = Save card
-ContractCardComponent.saveButton.desc                                   = Save
-ContractCardComponent.sendforapprovalbutton.cap                         = Send for approval
-ContractCardComponent.sentToApproval.cap                                = Sent to approval
-ContractCardComponent.sentToApproval.des                                = The process is getting to the next step - Estimate approval 
-ContractCardComponent.settingsbutton.cap                                = Settings of summary estimate calculation
-ContractCardComponent.tabs.coefficients                                 = Re-count coefficients
-ContractCardComponent.tabs.estimates                                    = Local estimates
-ContractCardComponent.tabs.milestones                                   = Contract stages
-ContractCardComponent.uploadLimitMessage.cap                            = Uploading file size mustn't be greater than {0} Mb
-ContractCardComponent.uploadMimeTypeMessage                             = Please, choose EXCEL file
-ContractCardComponent.uploadMimeTypeMessage.cap                         = Incorrect file type
-ContractCardComponent.uploadProgressWindow.cancelButton.cap             = Cancel
-ContractCardComponent.uploadProgressWindow.cap                          = Uploading the Excel file of local estimates
-ContractCardComponent.uploadProgressWindow.file.cap                     = File name
-ContractCardComponent.uploadProgressWindow.state.cap                    = State
-ContractCardComponent.uploadProgressWindow.success.cap                  = The processing has been completed 
-ContractCardComponent.uploadProgressWindow.success.des                  = The file {0} was successfuly processed in {1} sec
-ContractCardComponent.uploadProgressWindow.toBackgroundButton.cap       = Run in background 
-ContractCardComponent.uploadProgressWindow.toBackgroundNotification.cap = Switching to background mode
-ContractCardComponent.uploadProgressWindow.toBackgroundNotification.des = You will be notified by Email when the processing is finished
-ContractCardComponent.uploadProgressWindow.uploadingProgress.cap        = Progress
-ContractCardComponent.viewAttributes.cap                                = View
-ContractCardComponent.viewCombobox.placeholder                          = Estimate
-ContractCardComponent.workSmrTab.cap                                    = Work SMR
+ContractCardComponent.closebutton.cap           = Close
+ContractCardComponent.fields.cap                = Contract card fields
+ContractCardComponent.fields.contractCode       = Contract \u2116
+ContractCardComponent.fields.contractType       = Type
+ContractCardComponent.fields.customerName       = Customer
+ContractCardComponent.fields.endDate            = End deadline
+ContractCardComponent.fields.executorName       = Executor
+ContractCardComponent.fields.project            = Project
+ContractCardComponent.fields.signingDate        = Signing date
+ContractCardComponent.fields.startDate          = Start deadline
+ContractCardComponent.initialmaxpricebutton.cap = Calculate
+ContractCardComponent.notifications.save.cap    = Contract card is saved
+ContractCardComponent.notifications.save.des    = Current step of the process is complited
+ContractCardComponent.saveButton.cap            = Save card
+ContractCardComponent.saveButton.desc           = Save
+ContractCardComponent.sendforapprovalbutton.cap = Send for approval
+ContractCardComponent.settingsbutton.cap        = Settings of summary estimate calculation
+ContractCardComponent.tabs.coefficients         = Re-count coefficients
+ContractCardComponent.tabs.estimates            = Local estimates
+ContractCardComponent.tabs.milestones           = Contract stages
 
 CostsTreeGridComponent.addItemButton.desc       = Add cost
 CostsTreeGridComponent.bigdecimalconverter.desc = Must be an amount
@@ -175,6 +148,39 @@ ProcessManagerView.procViewerTab.cap  = Process & tasks
 RegisterComponent.createItemButton.cap = Create
 RegisterComponent.filter.placeholder   = Search...
 RegisterComponent.openItemButton.cap   = Open
+
+SummaryEstimateCardComponent.calcFields.createDate.cap                         = Create date
+SummaryEstimateCardComponent.calcFields.estimateCode.cap                       = Estimate calculation code
+SummaryEstimateCardComponent.calcFields.name.cap                               = Estimate calculation name
+SummaryEstimateCardComponent.calcFields.projectCode.cap                        = Project code
+SummaryEstimateCardComponent.closebutton.cap                                   = Close
+SummaryEstimateCardComponent.commentTab.cap                                    = Comment
+SummaryEstimateCardComponent.costsTab.cap                                      = Estimated cost
+SummaryEstimateCardComponent.estimatecalculationfileds.cap                     = Summary Estimate Attributes 
+SummaryEstimateCardComponent.initialmaxpricebutton.cap                         = Calculate price
+SummaryEstimateCardComponent.itemsCombobox.placeholder                         = Show
+SummaryEstimateCardComponent.priceLevel.cap                                    = Price level
+SummaryEstimateCardComponent.saveButton.desc                                   = Save
+SummaryEstimateCardComponent.sendforapprovalbutton.cap                         = Send to approval
+SummaryEstimateCardComponent.sentToApproval.cap                                = Sent to approval
+SummaryEstimateCardComponent.sentToApproval.des                                = The process is getting to the next step - Estimate approval 
+SummaryEstimateCardComponent.settingsbutton.cap                                = Settings
+SummaryEstimateCardComponent.uploadLimitMessage.cap                            = Uploading file size mustn't be greater than {0} Mb
+SummaryEstimateCardComponent.uploadMimeTypeMessage                             = Please, choose EXCEL file
+SummaryEstimateCardComponent.uploadMimeTypeMessage.cap                         = Incorrect file type
+SummaryEstimateCardComponent.uploadProgressWindow.cancelButton.cap             = Cancel
+SummaryEstimateCardComponent.uploadProgressWindow.cap                          = Uploading the Excel file of local estimates
+SummaryEstimateCardComponent.uploadProgressWindow.file.cap                     = File name
+SummaryEstimateCardComponent.uploadProgressWindow.state.cap                    = State
+SummaryEstimateCardComponent.uploadProgressWindow.success.cap                  = The processing has been completed 
+SummaryEstimateCardComponent.uploadProgressWindow.success.des                  = The file {0} was successfuly processed in {1} sec
+SummaryEstimateCardComponent.uploadProgressWindow.toBackgroundButton.cap       = Run in background 
+SummaryEstimateCardComponent.uploadProgressWindow.toBackgroundNotification.cap = Switching to background mode
+SummaryEstimateCardComponent.uploadProgressWindow.toBackgroundNotification.des = You will be notified by Email when the processing is finished
+SummaryEstimateCardComponent.uploadProgressWindow.uploadingProgress.cap        = Progress
+SummaryEstimateCardComponent.viewAttributes.cap                                = View
+SummaryEstimateCardComponent.viewCombobox.placeholder                          = Estimate
+SummaryEstimateCardComponent.workSmrTab.cap                                    = Work SMR
 
 TaskAlreadyAssigned.text = Task has already been assigned by user {0}.
 
